<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Slideshow Screensaver</string>
  <string name="image_content_description">Photo</string>

  <!-- Settings strings. -->
  <string name="pref_value_enabled">Enabled</string>
  <string name="pref_value_disabled">Disabled</string>

  <string translatable="false" name="pref_settings_key">settings_key</string>
  <string name="pref_settings_title">Slideshow Settings</string>

  <string translatable="false" name="pref_imageduration_key">pref_imageduration</string>
  <string name="pref_imageduration_title">Time Duration (ms).</string>
  <string name="pref_imageduration_dlg">Enter time duration (ms) to display images:</string>
  <string translatable="false" name="pref_imageduration_default">2500</string>

  <string translatable="false" name="pref_usemediastore_key">pref_usemediastore</string>
  <string name="pref_usemediastore_title">Use MediaStore provider.</string>
  <string name="pref_usemediastore_dlg">Show images from the Android index of attached storage devices:</string>
  <string translatable="false" name="pref_usemediastore_default">true</string>

  <string translatable="false" name="pref_directoryselector_key">pref_directoryselector</string>
  <string name="pref_directoryselector_title">Directory path.</string>
  <string name="pref_directoryselector_dlg">Directory:</string>
  <string translatable="false" name="pref_directoryselector_default">/storage</string>

  <string translatable="false" name="pref_recursedirectory_key">pref_recursedirectory</string>
  <string name="pref_recursedirectory_title">Recurse into subdirectories.</string>
  <string name="pref_recursedirectory_dlg">Include images from all subdirectories:</string>
  <string translatable="false" name="pref_recursedirectory_default">false</string>

  <string translatable="false" name="pref_shuffle_key">pref_shuffle</string>
  <string name="pref_shuffle_title">Random order.</string>
  <string name="pref_shuffle_dlg">Randomly shuffle the order of images:</string>
  <string translatable="false" name="pref_shuffle_default">false</string>

  <!-- Toast strings. -->
  <string name="toast_storage_permission_denied">Storage permission is required</string>

</resources>
