<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:key="@string/pref_settings_key"
    android:title="@string/pref_settings_title">

    <EditTextPreference
      android:key="@string/pref_imageduration_key"
      android:title="@string/pref_imageduration_title"
      android:inputType="number"
      android:defaultValue="@string/pref_imageduration_default"
      android:dialogTitle="@string/pref_imageduration_dlg" />

    <CheckBoxPreference
      android:key="@string/pref_usemediastore_key"
      android:title="@string/pref_usemediastore_title"
      android:dialogTitle="@string/pref_usemediastore_dlg"
      android:defaultValue="@string/pref_usemediastore_default" />

    <com.ls.directoryselector.DirectoryPreference
      android:key="@string/pref_directoryselector_key"
      android:title="@string/pref_directoryselector_title"
      android:dialogTitle="@string/pref_directoryselector_dlg"
      android:defaultValue="@string/pref_directoryselector_default"
      android:summary="Path"
      android:positiveButtonText="@android:string/ok"
      android:negativeButtonText="@android:string/cancel" />

    <CheckBoxPreference
      android:key="@string/pref_recursedirectory_key"
      android:title="@string/pref_recursedirectory_title"
      android:dialogTitle="@string/pref_recursedirectory_dlg"
      android:defaultValue="@string/pref_recursedirectory_default" />

  </PreferenceCategory>
</PreferenceScreen>
